Fix Form Text Input With Affixes to expand Suffix and Prefix on Safari (#7044)

--- a/client/components/forms/form-text-input-with-affixes/style.scss
+++ b/client/components/forms/form-text-input-with-affixes/style.scss
@@ -45,6 +45,7 @@
 	color: darken( $gray, 20% );
 	padding: 8px 14px;
 	white-space: nowrap;
+	flex: 1 0 auto;
 }
 
 .form-text-input-with-affixes__prefix {
